Fix: .btn-sm too big

--- a/src/scss/_btn.scss
+++ b/src/scss/_btn.scss
@@ -17,7 +17,7 @@
     font-size: .9rem;
 
     &-sm {
-        padding: .55rem 3rem;
+        padding: .55rem 1.5rem;
     }
 
     &-outline-light {
